# LatentDistanceModelling

./: .gitignore  DataLoader.py  EdgeSampler.py  GraphConstructor.py  LatentDistanceModel.py  Poisson 1.ipynb  master_pdf_builder.ipynb  multitrain.py  new.ipynb  newldm.py  newtrain.py  noter.txt  pyproject.toml  swissroll  test pipeline.ipynb  train.py  training.py  utils.py
timelines/s_hole/k=20|samples=20000|negative_ratio=10|sigma_q=10|lr=0.05|weight_decay=0.0001|epochs=150/: timings.txt
timelines/s_hole/k=20|samples=20000|negative_ratio=10|sigma_q=5|lr=0.05|weight_decay=0.0001|epochs=150/: timings.txt
timelines/s_hole/k=20|samples=20000|negative_ratio=20|sigma_q=10|lr=0.05|weight_decay=0.0001|epochs=150/: timings.txt
timelines/s_hole/k=20|samples=20000|negative_ratio=20|sigma_q=5|lr=0.05|weight_decay=0.0001|epochs=400/: timings.txt
timelines/s_hole/k=40|samples=10000|negative_ratio=10|sigma_q=5|lr=0.05|weight_decay=0.0001|epochs=150/: timings.txt
timelines/s_hole/k=40|samples=20000|negative_ratio=10|sigma_q=10|lr=0.05|weight_decay=0.0001|epochs=150/: timings.txt
timelines/s_hole/k=40|samples=20000|negative_ratio=10|sigma_q=5|lr=0.05|weight_decay=0.0001|epochs=150/: timings.txt
v2_LatentDistanceModelling-master - Copy/: LDM experiments - Copy.ipynb  LatentDistanceModel.py  train.py  utils.py
v2_LatentDistanceModelling-master - Copy (2)/: Benchmarking.ipynb  LDM experiments - Copy.ipynb  Loss graph.ipynb  train.py  utils.py  visualizations.ipynb
v2_LatentDistanceModelling-master - Copy/evals/model0/: info.txt
(+8 files in other folders)
